--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login of Script Gate</title>
+    <title>Script Gate | Account</title>
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
-            background: #f3f4f6;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #4f79c6, #0d1f44);
+            color: #fff;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -17,92 +18,93 @@
         }
 
         .container {
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            background: #ffffff;
+            border-radius: 12px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
             width: 400px;
             max-width: 90%;
-            padding: 20px;
+            padding: 30px;
             text-align: center;
-            transition: transform 0.6s ease-in-out;
+            transform: scale(1);
+            transition: transform 0.5s ease-in-out;
         }
 
-        .input-field {
-            margin-bottom: 16px;
+        .container:hover {
+            transform: scale(1.02);
+        }
+
+        h2 {
+            color: #0d1f44;
+            margin-bottom: 20px;
         }
 
         input[type="text"], input[type="password"], input[type="email"] {
             width: 100%;
             padding: 12px;
-            margin-top: 8px;
+            margin: 10px 0;
             border: 1px solid #ccc;
-            border-radius: 4px;
+            border-radius: 6px;
             font-size: 16px;
+            transition: box-shadow 0.3s;
         }
 
-        .visual-line {
-            height: 2px;
-            background: #ccc;
-            margin: 20px 0;
+        input:focus {
+            box-shadow: 0 0 10px rgba(79, 121, 198, 0.8);
+            outline: none;
+        }
+
+        button {
+            background: #4f79c6;
+            color: white;
+            border: none;
+            border-radius: 6px;
+            padding: 14px;
+            font-size: 16px;
+            cursor: pointer;
+            width: 100%;
+            transition: background 0.3s;
+        }
+
+        button:hover {
+            background: #0d1f44;
         }
 
         .action-link {
-            color: #007bff;
+            color: #4f79c6;
             text-decoration: none;
             font-size: 14px;
             cursor: pointer;
         }
 
-        button {
-            background: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            padding: 12px 20px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background: #0056b3;
+        .action-link:hover {
+            text-decoration: underline;
         }
 
         .hidden {
             display: none;
         }
-
     </style>
 </head>
 <body>
     <div class="container" id="form-container">
         <!-- Login Form -->
         <div id="login-form">
-            <h2>Login</h2>
-            <div class="input-field">
-                <input type="text" id="login" placeholder="Login">
-            </div>
-            <div class="input-field">
-                <input type="password" id="password" placeholder="Enter Password">
-            </div>
-            <div class="visual-line"></div>
-            <a class="action-link" id="toggle-form">Create account</a>
+            <h2>Welcome Back!</h2>
+            <input type="text" id="login" placeholder="Username">
+            <input type="password" id="password" placeholder="Password">
+            <button id="login-button">Login</button>
+            <p><a class="action-link" id="toggle-form">Create an Account</a></p>
         </div>
 
         <!-- Create Account Form -->
         <div id="create-account-form" class="hidden">
-            <h2>Create Account</h2>
-            <div class="input-field">
-                <input type="email" id="email" placeholder="Enter Email">
-            </div>
-            <div class="input-field">
-                <input type="text" id="username" placeholder="Create Username">
-            </div>
-            <div class="input-field">
-                <input type="text" id="code" placeholder="Enter Code">
-            </div>
-            <div class="visual-line"></div>
-            <button id="create-account-button">Create Account</button>
-            <a class="action-link" id="toggle-back">Login to your account</a>
+            <h2>Create Your Account</h2>
+            <input type="email" id="email" placeholder="Enter Email">
+            <input type="text" id="username" placeholder="Choose Username">
+            <input type="text" id="code" placeholder="Enter Verification Code">
+            <button id="request-code">Request Code</button>
+            <button id="create-account-button" disabled>Create Account</button>
+            <p><a class="action-link" id="toggle-back">Already have an account? Login</a></p>
         </div>
     </div>
 
@@ -111,7 +113,8 @@
         const toggleBack = document.getElementById('toggle-back');
         const loginForm = document.getElementById('login-form');
         const createAccountForm = document.getElementById('create-account-form');
-        const formContainer = document.getElementById('form-container');
+        const requestCodeBtn = document.getElementById('request-code');
+        const createAccountBtn = document.getElementById('create-account-button');
 
         toggleForm.addEventListener('click', () => {
             loginForm.classList.add('hidden');
@@ -123,29 +126,48 @@
             loginForm.classList.remove('hidden');
         });
 
-        // Simulated backend functionality
-        const backend = {
-            users: [],
+        // Generate a random 6-digit code
+        function generateCode() {
+            return Math.floor(100000 + Math.random() * 900000).toString();
+        }
 
-            createAccount(email, username, code) {
-                this.users.push({ email, username, code });
-                alert('Account created successfully!');
-            },
-
-            login(username, password) {
-                alert('Login successful (simulation)!');
-            }
-        };
-
-        document.getElementById('create-account-button').addEventListener('click', () => {
+        // Simulate sending the code via email
+        requestCodeBtn.addEventListener('click', () => {
             const email = document.getElementById('email').value;
-            const username = document.getElementById('username').value;
-            const code = document.getElementById('code').value;
 
-            backend.createAccount(email, username, code);
+            if (!email) {
+                alert('Please enter your email to request a code.');
+                return;
+            }
+
+            const verificationCode = generateCode();
+            alert(`A code has been sent to your email: ${email}\nCode: ${verificationCode} (simulation)`);
+
+            // Store the code temporarily
+            sessionStorage.setItem('verificationCode', verificationCode);
+            createAccountBtn.disabled = false;
         });
 
+        // Validate the code and create an account
+        createAccountBtn.addEventListener('click', () => {
+            const enteredCode = document.getElementById('code').value;
+            const storedCode = sessionStorage.getItem('verificationCode');
+            const username = document.getElementById('username').value;
+
+            if (enteredCode !== storedCode) {
+                alert('Invalid code. Please check your email.');
+                return;
+            }
+
+            if (!username) {
+                alert('Please enter a username.');
+                return;
+            }
+
+            alert('Account created successfully! You can now log in.');
+            createAccountForm.classList.add('hidden');
+            loginForm.classList.remove('hidden');
+        });
     </script>
 </body>
 </html>
-
