--- a/index.html
+++ b/index.html
@@ -3,194 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Script Gate | Account</title>
+    <title>Chrome Extensions Showcase</title>
     <style>
-        body {
-            margin: 0;
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #4f79c6, #0d1f44);
-            color: #fff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            overflow: hidden;
-        }
-
-        .container {
-            background: #ffffff;
-            border-radius: 12px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-            width: 400px;
-            max-width: 90%;
-            padding: 30px;
-            text-align: center;
-            transform: scale(1);
-            transition: transform 0.5s ease-in-out;
-        }
-
-        .container:hover {
-            transform: scale(1.02);
-        }
-
-        h2 {
-            color: #0d1f44;
-            margin-bottom: 20px;
-        }
-
-        input[type="text"], input[type="password"], input[type="email"] {
-            width: 100%;
-            padding: 12px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 6px;
-            font-size: 16px;
-            transition: box-shadow 0.3s;
-        }
-
-        input:focus {
-            box-shadow: 0 0 10px rgba(79, 121, 198, 0.8);
-            outline: none;
-        }
-
-        button {
-            background: #4f79c6;
-            color: white;
-            border: none;
-            border-radius: 6px;
-            padding: 14px;
-            font-size: 16px;
-            cursor: pointer;
-            width: 48%;
-            margin: 10px 1%;
-            transition: background 0.3s;
-        }
-
-        button:hover {
-            background: #0d1f44;
-        }
-
-        .action-link {
-            color: #4f79c6;
-            text-decoration: none;
-            font-size: 14px;
-            cursor: pointer;
-        }
-
-        .action-link:hover {
-            text-decoration: underline;
-        }
-
-        .hidden {
-            display: none;
-        }
-
-        .button-group {
-            display: flex;
-            justify-content: space-between;
-        }
+        * {margin:0;padding:0;box-sizing:border-box;font-family:'Segoe UI',sans-serif;}
+        body {background:#f5faff;color:#1a2b4c;line-height:1.6;overflow-x:hidden;}
+        .container {max-width:1300px;margin:0 auto;padding:0 30px;}
+        nav {background:linear-gradient(135deg,#007bff,#00b4ff);padding:1.5rem 0;position:sticky;top:0;z-index:100;box-shadow:0 4px 15px rgba(0,123,255,0.2);}
+        nav .container {display:flex;justify-content:space-between;align-items:center;}
+        nav .logo {font-size:1.8rem;font-weight:600;color:white;}
+        nav ul {display:flex;list-style:none;}
+        nav ul li {margin-left:2rem;}
+        nav ul li a {color:white;text-decoration:none;font-weight:500;padding:8px 16px;border-radius:25px;transition:all 0.3s ease;}
+        nav ul li a:hover {background:white;color:#007bff;transform:scale(1.05);}
+        header {background:linear-gradient(135deg,#007bff,#00b4ff);color:white;padding:4rem 0;text-align:center;position:relative;overflow:hidden;}
+        header h1 {font-size:3rem;margin-bottom:1rem;font-weight:700;letter-spacing:1px;}
+        header p {font-size:1.2rem;opacity:0.9;}
+        .showcase {padding:6rem 0;text-align:center;background:#f5faff;}
+        .showcase h2 {font-size:2.5rem;color:#007bff;margin-bottom:3rem;}
+        .extension-slider {position:relative;height:350px;overflow:hidden;margin:2rem auto;width:80%;background:linear-gradient(135deg,#ffffff,#f0f8ff);border-radius:20px;box-shadow:0 10px 30px rgba(0,123,255,0.1);border:1px solid rgba(0,123,255,0.1);}
+        .extension {position:absolute;width:340px;padding:2.5rem;background:white;border-radius:15px;box-shadow:0 5px 20px rgba(0,0,0,0.05);animation:slide 12s infinite ease-in-out;transform:translateX(-50%);}
+        .extension:nth-child(1) {animation-delay:0s;}
+        .extension:nth-child(2) {animation-delay:4s;}
+        .extension:nth-child(3) {animation-delay:8s;}
+        @keyframes slide {0%{left:-50%;opacity:0;transform:translateX(0) scale(0.95);}10%{left:50%;opacity:1;transform:translateX(-50%) scale(1);}30%{left:50%;opacity:1;transform:translateX(-50%) scale(1);}40%{left:150%;opacity:0;transform:translateX(-100%) scale(0.95);}100%{left:150%;opacity:0;}}
+        .extension h3 {color:#007bff;font-size:1.8rem;margin-bottom:1.2rem;font-weight:600;}
+        .extension p {color:#666;font-size:1.1rem;margin-bottom:1.5rem;}
+        .btn {display:inline-block;padding:12px 25px;margin:0 8px;text-decoration:none;border-radius:30px;font-weight:500;transition:all 0.3s ease;cursor:pointer;}
+        .btn-download {background:linear-gradient(135deg,#007bff,#00b4ff);color:white;border:none;}
+        .btn-store {background:white;color:#007bff;border:2px solid #007bff;}
+        .btn:hover {transform:translateY(-4px) scale(1.05);box-shadow:0 5px 15px rgba(0,123,255,0.3);}
+        .btn-download:hover {background:linear-gradient(135deg,#0056b3,#0086cc);}
+        .btn-store:hover {background:#007bff;color:white;}
+        footer {text-align:center;padding:3rem 0;background:linear-gradient(135deg,#f0f8ff,#ffffff);position:relative;}
+        footer p {color:#666;font-size:1.1rem;}
+        .wave {position:absolute;width:100%;height:150px;opacity:0.1;background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1440 320'%3E%3Cpath fill='%23007bff' d='M0,96L48,112C96,128,192,160,288,160C384,160,480,128,576,112C672,96,768,96,864,112C960,128,1056,160,1152,160C1248,160,1344,128,1392,112L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z'%3E%3C/path%3E%3C/svg%3E");background-size:cover;}
+        .wave-top {top:0;transform:translateY(-70%);}
+        .wave-bottom {bottom:0;transform:translateY(70%);}
     </style>
 </head>
 <body>
-    <div class="container" id="form-container">
-        <!-- Login Form -->
-        <div id="login-form">
-            <h2>Welcome Back!</h2>
-            <input type="text" id="login" placeholder="Username">
-            <input type="password" id="password" placeholder="Password">
-            <button id="login-button">Login</button>
-            <p><a class="action-link" id="toggle-form">Create an Account</a></p>
+    <nav>
+        <div class="container">
+            <div class="logo">Extensions</div>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/tos">ToS</a></li>
+                <li><a href="/aboutsite">About Site</a></li>
+                <li><a href="/aboutowner">About Owner</a></li>
+            </ul>
         </div>
-
-        <!-- Create Account Form -->
-        <div id="create-account-form" class="hidden">
-            <h2>Create Your Account</h2>
-            <input type="email" id="email" placeholder="Enter Email">
-            <input type="text" id="username" placeholder="Choose Username">
-            <input type="password" id="create-password" placeholder="Create Password">
-            <input type="text" id="code" placeholder="Enter Verification Code">
-            <div class="button-group">
-                <button id="request-code">Request Code</button>
-                <button id="create-account-button" disabled>Create Account</button>
+    </nav>
+    <div class="wave wave-top"></div>
+    <header>
+        <div class="container">
+            <h1>Premium Chrome Extensions</h1>
+            <p>Elevate your browsing experience with our sleek tools</p>
+        </div>
+    </header>
+    <section class="showcase">
+        <div class="container">
+            <h2>Our Extensions</h2>
+            <div class="extension-slider">
+                <div class="extension">
+                    <h3>Privacy Rights</h3>
+                    <p>Secure your digital footprint</p>
+                    <button class="btn btn-download" onclick="alert('Download starting...')">Download</button>
+                    <a href="https://chrome.google.com/webstore" target="_blank" class="btn btn-store">Go to Extension</a>
+                </div>
+                <div class="extension">
+                    <h3>LinkLeap</h3>
+                    <p>Seamless link navigation</p>
+                    <button class="btn btn-download" onclick="alert('Download starting...')">Download</button>
+                    <a href="https://chrome.google.com/webstore" target="_blank" class="btn btn-store">Go to Extension</a>
+                </div>
+                <div class="extension">
+                    <h3>Youtube Saver</h3>
+                    <p>Save videos effortlessly</p>
+                    <button class="btn btn-download" onclick="alert('Download starting...')">Download</button>
+                    <a href="https://chrome.google.com/webstore" target="_blank" class="btn btn-store">Go to Extension</a>
+                </div>
             </div>
-            <p><a class="action-link" id="toggle-back">Already have an account? Login</a></p>
         </div>
-    </div>
-
-    <script>
-        const toggleForm = document.getElementById('toggle-form');
-        const toggleBack = document.getElementById('toggle-back');
-        const loginForm = document.getElementById('login-form');
-        const createAccountForm = document.getElementById('create-account-form');
-        const requestCodeBtn = document.getElementById('request-code');
-        const createAccountBtn = document.getElementById('create-account-button');
-        const loginButton = document.getElementById('login-button');
-
-        toggleForm.addEventListener('click', () => {
-            loginForm.classList.add('hidden');
-            createAccountForm.classList.remove('hidden');
-        });
-
-        toggleBack.addEventListener('click', () => {
-            createAccountForm.classList.add('hidden');
-            loginForm.classList.remove('hidden');
-        });
-
-        // Generate a random 6-digit code
-        function generateCode() {
-            return Math.floor(100000 + Math.random() * 900000).toString();
-        }
-
-        // Simulate sending the code via email
-        requestCodeBtn.addEventListener('click', () => {
-            const email = document.getElementById('email').value;
-
-            if (!email) {
-                alert('Please enter your email to request a code.');
-                return;
-            }
-
-            const verificationCode = generateCode();
-            alert(`A code has been sent to your email: ${email}\nCode: ${verificationCode} (simulation)`);
-
-            // Store the code temporarily
-            sessionStorage.setItem('verificationCode', verificationCode);
-            createAccountBtn.disabled = false;
-        });
-
-        // Validate the code and create an account
-        createAccountBtn.addEventListener('click', () => {
-            const enteredCode = document.getElementById('code').value;
-            const storedCode = sessionStorage.getItem('verificationCode');
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('create-password').value;
-
-            if (enteredCode !== storedCode) {
-                alert('Invalid code. Please check your email.');
-                return;
-            }
-
-            if (!username || !password) {
-                alert('Please fill in all fields.');
-                return;
-            }
-
-            alert('Account created successfully! You can now log in.');
-            createAccountForm.classList.add('hidden');
-            loginForm.classList.remove('hidden');
-        });
-
-        // Redirect to /scripts after login
-        loginButton.addEventListener('click', () => {
-            const username = document.getElementById('login').value;
-            const password = document.getElementById('password').value;
-
-            if (username && password) {
-                window.location.href = '/scripts';
-            } else {
-                alert('Please enter both username and password.');
-            }
-        });
-    </script>
+    </section>
+    <footer>
+        <div class="container">
+            <p>© 2025 Premium Extensions. Crafted with perfection.</p>
+        </div>
+    </footer>
+    <div class="wave wave-bottom"></div>
 </body>
 </html>
