--- a/tos/index.html
+++ b/tos/index.html
@@ -296,7 +296,7 @@
                     <h2>User Rules</h2>
                     <ul class="policy-list">
                         <li>Users must follow all Chrome Web Store rules when using our extensions.</li>
-                        <li>Do not change, share, or take apart our extensions without permission.</li>
+                        <li>Do not change, or take apart our extensions without permission reverse engineering any of our extensions is not allowed.</li>
                         <li>Any wrong use of the extensions is your own fault.</li>
                         <li>Use the extensions only for legal stuff and don't step on other people's rights.</li>
                         <li>We can change these terms any time without telling you first.</li>
