--- a/aboutowner/index.html
+++ b/aboutowner/index.html
@@ -572,7 +572,7 @@
             <div class="about-box">
                 <div class="about-section">
                     <h2>Who I Am</h2>
-                    <p>Hey there! I'm a 16 year old high school student who loves building helpful browser extensions and coding. I'm always working to improve my skills as a developer to create tools that make using the web better for everyone.</p>
+                    <p>Hey there! I'm a 16 year old high school student who loves building helpful browser extensions and coding. I'm always working to improve my skills as a developer to create tools that make using the web better for everyone, I also know c#, c++, lua, js, and python.</p>
                     
                     <p>I balance my school work with several coding projects at once. While I'm still learning, I put in the effort to make sure everything I create works well and solves real problems.</p>
                 </div>
