--- a/tos/index.html
+++ b/tos/index.html
@@ -268,6 +268,7 @@
                 <li><a href="/tos" class="active">ToS</a></li>
                 <li><a href="/aboutsite">About Site</a></li>
                 <li><a href="/aboutowner">About Owner</a></li>
+                <li><a href="/crxmethod">CRX Method</a></li>
             </ul>
         </div>
     </nav>
