--- a/vidpulse/index.html
+++ b/vidpulse/index.html
@@ -285,7 +285,8 @@
                 <li><a href="/tos">ToS</a></li>
                 <li><a href="/aboutsite">About Site</a></li>
                 <li><a href="/aboutowner">About Owner</a></li>
-                <li><a href="/crxmethod" class="active">CRX Method</a></li>
+                <li><a href="/crxmethod">CRX Method</a></li>
+                <li><a href="/showcases">Showcase</a></li>
             </ul>
         </div>
     </nav>
