--- a/tos/index.html
+++ b/tos/index.html
@@ -265,10 +265,12 @@
             <div class="logo">Extensions</div>
             <ul>
                 <li><a href="/">Home</a></li>
+                <li><a href="/linkleap">LinkLeap Bypass</a></li>
+                <li><a href="/crxmethod">CRX Method</a></li>
+                <li><a href="/showcase">Showcase</a></li>
                 <li><a href="/tos" class="active">ToS</a></li>
                 <li><a href="/aboutsite">About Site</a></li>
                 <li><a href="/aboutowner">About Owner</a></li>
-                <li><a href="/crxmethod">CRX Method</a></li>
             </ul>
         </div>
     </nav>
