--- a/index.html
+++ b/index.html
@@ -534,8 +534,8 @@
     
     <header>
         <div class="container">
-            <h1>Browser Add-Ons</h1>
-            <p>Check out my new browser add-ons, coming soon!</p>
+            <h1>Chrome Extensions.</h1>
+            <p>Start using my upcoming chrome extensions now.</p>
         </div>
     </header>
     
