--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
     
     <section class="showcase">
         <div class="container">
-            <h2>My Add-Ons</h2>
+            <h2>My Extensions.</h2>
             <div class="extension-slider">
                 <div class="extension">
                     <div class="badge yellow">Halfway done</div>
