--- a/index.html
+++ b/index.html
@@ -522,12 +522,12 @@
             <div class="logo">Extensions</div>
             <ul>
                 <li><a href="/" class="active">Home</a></li>
-                <li><a href="/linkleapbypass">LinkLeap Bypass</a></li>
+                <li><a href="/tos">Tos</a></li>
+                <li><a href="/aboutsite">About Site</a></li>
+                <li><a href="/aboutowner">About Owner</a></li>
                 <li><a href="/crxmethod">CRX Method</a></li>
-                <li><a href="/showcases">Showcases</a></li>
-                <li><a href="/tos">Terms</a></li>
-                <li><a href="/aboutsite">Site Info</a></li>
-                <li><a href="/aboutowner">About Me</a></li>
+                <li><a href="/showcase">Showcase</a></li>
+                <li><a href="/linkleap">Link Leap</a></li>
             </ul>
         </div>
     </nav>
@@ -535,7 +535,7 @@
     <header>
         <div class="container">
             <h1>Chrome Extensions.</h1>
-            <p>Start using my upcoming chrome extensions now.</p>
+            <p>Start using our upcoming chrome extensions now.</p>
         </div>
     </header>
     
@@ -584,7 +584,7 @@
     
     <footer>
         <div class="container">
-            <p>© 2025 Handy Browser Tools. Made with Smart Script Studios.</p>
+            <p>© 2025 Useful Chrome Extensions. Made with Smart Script Studios.</p>
         </div>
     </footer>
 </body>
