--- a/aboutowner/index.html
+++ b/aboutowner/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -540,8 +539,12 @@
             <div class="logo">Extensions</div>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/tos">ToS</a></li>
+                <li><a href="/tos">Tos</a></li>
                 <li><a href="/aboutsite">About Site</a></li>
+                <li><a href="/aboutowner">About Owner</a></li>
+                <li><a href="/crxmethod">CRX Method</a></li>
+                <li><a href="/showcase">Showcase</a></li>
+                <li><a href="/linkleap">Link Leap</a></li>
             </ul>
         </div>
     </nav>
@@ -608,7 +611,7 @@
                         <div class="skill-item">
                             <h3>
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                    <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"/>
+                                    <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-1-4h2v2h-2zm0-10h2v8h-2z"/>
                                 </svg>
                                 Testing
                             </h3>
@@ -631,7 +634,7 @@
                     <p>Have questions about my extensions? Want to share ideas or report bugs? I'm always happy to hear from users.</p>
                     
                     <div class="buttons-container">
-                        <a href="/cdn-cgi/l/email-protection#badbc9decdcddbc9888989faddd7dbd3d694d9d5d7" class="contact-btn">
+                        <a href="/cdn-cgi/l/email-protection#fadbc9decdcddbc9888989faddd7dbd3d694d9d5d7" class="contact-btn">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                 <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
                             </svg>
