--- a/aboutsite/index.html
+++ b/aboutsite/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -321,7 +322,11 @@
             <div class="logo">Extensions</div>
             <ul>
                 <li><a href="/">Home</a></li>
+                <li><a href="/linkleap">LinkLeap Bypass</a></li>
+                <li><a href="/crxmethod">CRX Method</a></li>
+                <li><a href="/showcase">Showcase</a></li>
                 <li><a href="/tos">ToS</a></li>
+                <li><a href="/aboutsite">About Site</a></li>
                 <li><a href="/aboutowner">About Owner</a></li>
             </ul>
         </div>
