--- a/crxmethod/index.html
+++ b/crxmethod/index.html
@@ -282,10 +282,12 @@
             <div class="logo">Extensions</div>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/tos">ToS</a></li>
+                <li><a href="/tos">Tos</a></li>
                 <li><a href="/aboutsite">About Site</a></li>
                 <li><a href="/aboutowner">About Owner</a></li>
                 <li><a href="/crxmethod" class="active">CRX Method</a></li>
+                <li><a href="/showcase">Showcase</a></li>
+                <li><a href="/linkleap">Link Leap</a></li>
             </ul>
         </div>
     </nav>
