--- a/aboutsite/index.html
+++ b/aboutsite/index.html
@@ -322,7 +322,7 @@
             <div class="logo">Extensions</div>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/linkleap">LinkLeap Bypass</a></li>
+                <li><a href="/linkleap">Link Leap</a></li>
                 <li><a href="/crxmethod">CRX Method</a></li>
                 <li><a href="/showcase">Showcase</a></li>
                 <li><a href="/tos">ToS</a></li>
